; ModuleID = '/home/carl/AnghaBench/systemd/src/systemctl/extr_systemctl.c_start_with_fallback.c'
source_filename = "/home/carl/AnghaBench/systemd/src/systemctl/extr_systemctl.c_start_with_fallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EIO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Failed to talk to init daemon.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @start_with_fallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @start_with_fallback() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 @start_unit(i32 0, i32* null, i32* null)
  %3 = icmp eq i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %9

5:                                                ; preds = %0
  %6 = load i32, i32* @EIO, align 4
  %7 = call i32 @SYNTHETIC_ERRNO(i32 %6)
  %8 = call i32 @log_error_errno(i32 %7, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  store i32 %8, i32* %1, align 4
  br label %9

9:                                                ; preds = %5, %4
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i64 @start_unit(i32, i32*, i32*) #1

declare dso_local i32 @log_error_errno(i32, i8*) #1

declare dso_local i32 @SYNTHETIC_ERRNO(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
